@@ -161,6 +161,7 @@ Those improvements were implemented by Albina Starykova as part of an [Outreachy
  * Refactor `SnippetViewSet` to extend `ModelViewSet` (Sage Abdullah)
  * Migrate initDismissibles behaviour to a Stimulus controller `w-disimissible` (Loveth Omokaro)
  * Replace jQuery autosize v3 with Stimulus `w-autosize` controller using autosize npm package v6 (Suyash Srivastava)
+ * Update `ActionController` with a click method (Aadi jindal)
 
 
 ## Upgrade considerations
